tests/invalid/Assert_Invalid_1.whiley
import * from whiley.lang.*

function f(int z) -> int:
    assert z
    return 0
